tests/test_files_pa3/SemanticErrors/LocalVarsNotInitB4Use4.ic
class B
{
	static void main(string[] args) { }

	void a()
	{
		int[] b;
		int c;
		c = b.length;
	}
}



